Fix 500 error caused by ambiguous pluck(:id)
* Fix issue descriptions not wrapping in smaller column widths
* Fix edit / new form labels and inputs overlapping on smaller column widths
* Fix issue descriptions not escaping html tags

--- a/assets/stylesheets/version.css
+++ b/assets/stylesheets/version.css
@@ -91,11 +91,6 @@ margin:10px 0 0 0;
     overflow: hidden;
     font-size: 13px;
   }
-	.description p {
-		margin: 0;
-		text-overflow: ellipsis;
-		white-space: nowrap;
-	}
 
 	.connectedSortable {
 		margin-top: 25px;
